create and implement openai_service.rb

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,3 +38,10 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #ff3366;
 }
+
+.error_message {
+    color: red;
+    font-weight: bold;
+}
+
+
