--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,12 @@
 <div class="container">
   <h1>Bio to Avatar</h1>
-  <%= form_tag('/generate_avatar', method: 'post') do %>
+  <% if @error_message.present? %>
+    <p class="error_message"><%= @error_message %></p>
+  <% end %>
+  <% if @avatar_url.present? %>
+    <img src="<%= @avatar_url %>" alt="Avatar" width="300" height="300" style="max-width: 100%; height: auto;">
+  <% end %>
+  <%= form_tag('home/generate_avatar', method: 'post') do %>
     <%= text_area_tag 'bio', nil, placeholder: 'Write your bio here...', rows: 4, cols: 50 %>
     <br>
     <%= submit_tag 'Generate Avatar' %>
