--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,12 +3,13 @@
   <% if @error_message.present? %>
     <p class="error_message"><%= @error_message %></p>
   <% end %>
+
   <% if @avatar_url.present? %>
-    <img src="<%= @avatar_url %>" alt="Avatar" width="300" height="300" style="max-width: 100%; height: auto;">
+    <img src="<%= @avatar_url %>" alt="Avatar" id="avatar_img" width="300" height="300" style="max-width: 100%; height: auto;">
   <% end %>
   <%= form_tag('home/generate_avatar', method: 'post') do %>
     <%= text_area_tag 'bio', @bio, placeholder: 'Write your bio here...', rows: 4, cols: 50 %>
     <br>
-    <%= submit_tag 'Generate Avatar', data: { disable_with: 'Generating...' }, id: 'generate_avatar_button' %>
+    <%= submit_tag 'Generate Avatar', id: 'generate_avatar_button' %>
   <% end %>
 </div>
